# nai

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
configs/: cliff.toml
docs/dev/: README.md  demo.sh  releasing.md
examples/: achievements.ron  config.ron  formal.ron  journal.ron  letter.ron  story.ron
scripts/: compress-assets.sh  prepare-assets.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  parser.rs  template.pest  time.rs
tests/: integration.rs
