[package]
name = "nai"
version = "0.5.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "time", "duration"]
license = "MIT"
repository = "https://github.com/azzamsa/nai"
description = "Measure the duration of meaningful pursuits"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
chrono = "0.4.26"
humantime = "2"
pest = "2.6"
pest_derive = "2.6"

# cli
clap = { version = "4.3", features = ["suggestions", "color", "cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
owo-colors = { version = "3.5", features = ["supports-colors"] }

# error
miette = { version = "5.9", features = ["fancy"] }
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# config
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing-log = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
tag-message = "{{version}}"
pre-release-commit-message = "{{version}}"
pre-release-hook = ["just", "_prepare-release", "{{version}}"]
