[package]
name = "nai"
version = "1.1.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "time", "duration"]
license = "MIT"
repository = "https://github.com/azzamsa/nai"
rust-version = "1.78.0"
description = "Measure the duration of meaningful pursuits"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
chrono = "0.4.37"
humantime = "2"
pest = "2.7"
pest_derive = "2.7"

# cli
clap = { version = "4.5", features = ["suggestions", "color", "cargo", "derive"] }
clap-verbosity-flag = "2.2.0"
owo-colors = { version = "3.5", features = ["supports-colors"] }

# error
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# config
num-traits = "0.2.18"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing-log = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
